--- a/contact.html
+++ b/contact.html
@@ -11,5 +11,19 @@
         <li>Tel: 555-5555</li>
         <li>Email: chanakarnkin [at] pim.ac.th</li>
     </ol>
+
+    <input type="checkbox" name="" value="">
+    <button type="button" name="button">Click Here</button>
+    <ul>
+        <li class = "list">
+            <a href="https://oak.in.th/">Oak.in.th</a>
+        </li>
+        <li class = "list">
+            <a href="https://www.google.com/">Google</a>
+        </li>
+        <li class = "list">
+            <a href="https://www.google.com/">Third Link</a>
+        </li>
+    </ul> 
 </body>
 </html>
